--- a/lunch_poll/templates/lunch_poll/base.html
+++ b/lunch_poll/templates/lunch_poll/base.html
@@ -14,16 +14,15 @@
   </head>
 
   <body>
-    <div class="page-header">
-      <h1><a href="/">Lunch Poll App</a></h1>
-    </div>
-    <div class="content container">
-      <div class="row">
-        <div class="col-md-8">
+    {% include "./header.html" %}
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-lg-7">
           {% block content %}
           {% endblock %}
         </div>
       </div>
     </div>
+    {% include "./footer.html" %}
   </body>
 </html>
