Admin Auth logic

--- a/pages/templates/pages/index.html
+++ b/pages/templates/pages/index.html
@@ -7,8 +7,7 @@
   <hr class="my-4">
   <p>If you are not an admin, nice day to you</p>
   <p class="lead text-center">
-    <!-- TODO: IF loged in redirect button -->
-    <a class="btn btn-primary btn-lg" href="{% url 'lunch_poll:index' %}">Admin Login</a>
+    <a class="btn btn-primary btn-lg" href="{% url 'login' %}">Admin Login</a>
   </p>
 </div>
 {% endblock %}
