--- a/pages/templates/registration/login.html
+++ b/pages/templates/registration/login.html
@@ -4,7 +4,7 @@
 <div class="row justify-content-center">
   <div class="col-8 mt-5">
     <div class="card">
-      <article class="card-body">
+      <article class="card-body pb-0">
         <h4 class="card-title text-center mb-4 mt-1">Login</h4>
         <hr>
         <p class="text-success text-center">Welcome Nora</p>
