--- a/lunch_poll/templates/lunch_poll/menu/formset.html
+++ b/lunch_poll/templates/lunch_poll/menu/formset.html
@@ -1,3 +1,4 @@
+<!-- Code based from https://dev.to/zxenia/django-inline-formsets-with-class-based-views-and-crispy-forms-14o6 -->
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 <table>
