--- a/lunch_poll/templates/lunch_poll/menu/index.html
+++ b/lunch_poll/templates/lunch_poll/menu/index.html
@@ -21,11 +21,11 @@
             <a href="{% url 'lunch_poll:menu_show' menu.id %}">{{ menu.id }}</a>
           </th>
           <td>{{ menu.menu_date }}</td>
-          <td>TODO</td>
+          <td>{{ menu.votes }}</td>
           <td>
             <form action="{% url 'lunch_poll:menu_destroy' menu.id%}" method="post">
               {% csrf_token %}
-              <button type="submit" class="fas fa-times text-danger"></button>
+              <button type="submit" class="fas fa-times text-danger border-0"></button>
             </form>
           </td>
         </tr>
