--- a/lunch_poll/templates/lunch_poll/base.html
+++ b/lunch_poll/templates/lunch_poll/base.html
@@ -20,6 +20,7 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-lg-10">
+          {% include "./messages.html" %}
           {% block content %}
           {% endblock %}
         </div>
