--- a/lunch_poll/templates/lunch_poll/index.html
+++ b/lunch_poll/templates/lunch_poll/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="tab-pane fade show" id="user" role="tabpanel" aria-labelledby="home-tab">
               <div class="tab-content" id="officeTabContent">
-                <a href="{% url 'lunch_poll:menu_new' %}">New</a>
+                <a href="{% url 'users:new' %}">New</a>
                 <hr>
                 <a href="{% url 'users:index' %}">Index</a>
               </div>
