--- a/users/templates/users/new.html
+++ b/users/templates/users/new.html
@@ -42,5 +42,16 @@
       </article>
     </div>
   </div>
+  <div class="col-6 mt-5">
+    <div class="card">
+      <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <!-- TODO -->
+          <h1 class="display-4">Massive User upload from csv</h1>
+          <p class="lead">To come</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
