Staff URL with uuid
No validation of user yet

--- a/lunch_poll/templates/lunch_poll/menu/show.html
+++ b/lunch_poll/templates/lunch_poll/menu/show.html
@@ -1,6 +1,7 @@
 {% extends 'lunch_poll/base.html' %}
 
 {% block content %}
+{{menu.uuid}}
 <div class="card">
   <div class="card-header">
     <h1><b>Menu #{{ menu.id }} - {{menu.menu_date}}</b></h1>
