Fix Admin menu show

--- a/lunch_poll/templates/lunch_poll/menu/show.html
+++ b/lunch_poll/templates/lunch_poll/menu/show.html
@@ -1,64 +1,53 @@
 {% extends 'lunch_poll/base.html' %}
 
 {% block content %}
-{{menu.uuid}}
-<div class="card">
-  <div class="card-header">
-    <h1><b>Menu #{{ menu.id }} - {{menu.menu_date}}</b></h1>
-  </div>
-  <div class="card-body">
-    <table class="table">
-      {% if menu.menu_date %}
-      <tr>
-        <th>Date</th>
-        <td>{{ menu.menu_date }}</td>
-        <td></td>
-        <td></td>
-      </tr>
-      {% endif %}
-      {% if menu.menu_intro %}
-      <tr>
-        <th>Menu Description</th>
-        <td>{{ menu.menu_intro }}</td>
-        <td></td>
-        <td></td>
-      </tr>
-      {% endif %}
-      <!-- TODO: HERE To test concept REMOVE later -->
-      {% if menu.has_options %}
-      {% for option in menu.has_options.all %}
-      <tr>
-        <th>Menu Option</th>
-        <td>{{option.choice_text}}</td>
-        <td>Total: {{option.votes}}</td>
-        <!-- TODO: HERE To test concept REMOVE later -->
-        <td>
-          <form action="{% url 'lunch_poll:selection_new'%}" method="post">
-            {% csrf_token %}
-            <input type="hidden" name="menu" value="{{menu.id}}">
-            <input type="hidden" name="option" value="{{option.id}}">
-            <div class=row>
-              <div class="col-11">
-                <input name="customization" class="form-control" placeholder="customization" type="text">
+<div class="container-fluid">
+  <div class="card">
+    <div class="card-header">
+      <h1><b>Menu #{{ menu.id }} - {{menu.menu_date}}</b>
+        <a tabindex="0" class="btn btn-lg btn-danger float-right" role="button" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="Extra info for today" data-content={{menu.menu_intro}}>
+          Description
+        </a>
+      </h1>
+    </div>
+    {% if menu.has_options %}
+    <div class="card-body">
+      <div class="container-fluid">
+        <div class="row">
+          {% for option in menu.has_options.all %}
+          <div class="col-6">
+            <div class="card mb-3">
+              <div class="card-header">
+                <h3>Option: {{ forloop.counter }}
+                  <button type="submit" class="fas fa-search-plus border-0 float-right bg-transparent text-success"></button>
+                </h3>
               </div>
-              <div class="col-1">
-                <button type="submit" class="fas fa-plus-circle border-0 float-right"></button>
+              <div class="card-body">
+                <p class="card-text"> {{option.choice_text}} </p>
+                <p class="card-text border-top pt-2">
+                  Total Selections: <b>{{option.votes}}</b>
+                </p>
               </div>
             </div>
-          </form>
-        </td>
-      </tr>
-      {% endfor %}
-      {% endif %}
-    </table>
-
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% endif %}
+  </div>
+  <div class="row">
+    <div class="col-6 pr-0">
+      <a class="btn btn-outline-info btn-block" href="{% url 'lunch_poll:menu_update' menu.id %}">Update</a>
+    </div>
+    <div class="col-6 pl-0">
+      <form action="{% url 'lunch_poll:menu_destroy' menu.id%}" method="post" class="m-0">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-outline-danger btn-block">Destroy</button>
+      </form>
+    </div>
   </div>
 </div>
-<div class="row mx-1">
-  <a class="btn btn-outline-info" href="{% url 'lunch_poll:menu_update' menu.id %}">Update</a>
-  <form action="{% url 'lunch_poll:menu_destroy' menu.id%}" method="post" class="m-0">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-outline-danger">Destroy</button>
-  </form>
-</div>
+
+
 {% endblock %}
