--- a/staff/templates/staff/menu/show.html
+++ b/staff/templates/staff/menu/show.html
@@ -22,7 +22,7 @@
                 <input type="hidden" name="menu" value="{{menu.id}}">
                 <input type="hidden" name="option" value="{{option.id}}">
                 <div class="card-header">
-                  <h3>Menu: {{ forloop.counter }}
+                  <h3>Option: {{ forloop.counter }}
                     <button type="submit" class="fas fa-plus-circle border-0 float-right bg-transparent text-success"></button>
                   </h3>
                 </div>
