--- a/lunch_poll/templates/lunch_poll/menu/show.html
+++ b/lunch_poll/templates/lunch_poll/menu/show.html
@@ -1,12 +1,16 @@
 {% extends 'lunch_poll/base.html' %}
 
 {% block content %}
+<!-- TODO: Remove uuid show -->
 <div class="container-fluid">
   <div class="card">
     <div class="card-header">
       <h1><b>Menu #{{ menu.id }} - {{menu.menu_date}}</b>
-        <a tabindex="0" class="btn btn-lg btn-danger float-right" role="button" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="Extra info for today" data-content={{menu.menu_intro}}>
+        <a tabindex="0" class="btn btn-lg btn-outline-primary float-right" role="button" data-toggle="popover" data-trigger="focus" data-placement="bottom" title="Extra info for today" data-content={{menu.menu_intro}}>
           Description
+        </a>
+        <a class="btn btn-outline-warning float-right btn-lg mr-2" href="{% url 'lunch_poll:reminder' menu.id %}">
+          Send Slack Notification
         </a>
       </h1>
     </div>
