Slack Working manually

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -15,7 +15,7 @@
           <th scope="col">Last Name</th>
           <th scope="col">First Name</th>
           <th scope="col">
-            Email or # Number?
+            Email
           </th>
           <th></th>
         </tr>
