--- a/lunch_poll/templates/lunch_poll/menu/show.html
+++ b/lunch_poll/templates/lunch_poll/menu/show.html
@@ -23,7 +23,8 @@
             <div class="card mb-3">
               <div class="card-header">
                 <h3>Option: {{ forloop.counter }}
-                  <button type="submit" class="fas fa-search-plus border-0 float-right bg-transparent text-success"></button>
+                  <button type="button" class="fas fa-search-plus border-0 float-right bg-transparent text-success" data-toggle="modal" data-target="#optionModal{{forloop.counter}}">
+                  </button>
                 </h3>
               </div>
               <div class="card-body">
@@ -52,6 +53,29 @@
     </div>
   </div>
 </div>
-
+{% if menu.has_options %}
+{% for option in menu.has_options.all %}
+<div class="modal fade" id="optionModal{{forloop.counter}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">People who chose Option #{{forloop.counter}}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <ul class="list-group">
+          {% for selection in option.selection_set.all %}
+            <li class="list-group-item">{{selection.selected_by.first_name}} {{selection.selected_by.last_name}} |
+               {{selection.selected_by.email}} </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+{% endfor %}
+{% endif %}
 
 {% endblock %}
