Aysnc request in local context

--- a/lunch_poll/templates/lunch_poll/menu/show.html
+++ b/lunch_poll/templates/lunch_poll/menu/show.html
@@ -67,15 +67,14 @@
       <div class="modal-body">
         <ul class="list-group">
           {% for selection in option.selection_set.all %}
-            <li class="list-group-item">{{selection.selected_by.first_name}} {{selection.selected_by.last_name}} |
-               {{selection.selected_by.email}}
-               {% if selection.customization %}
-               <a tabindex="0" class="btn btn-outline-primary float-right" role="button" data-toggle="popover" data-trigger="focus" data-placement="left"
-               data-content="{{selection.customization}}">
-                Customization
-               </a>
-               {% endif %}
-            </li>
+          <li class="list-group-item">{{selection.selected_by.first_name}} {{selection.selected_by.last_name}} |
+            {{selection.selected_by.email}}
+            {% if selection.customization %}
+            <a tabindex="0" class="btn btn-outline-primary float-right" role="button" data-toggle="popover" data-trigger="focus" data-placement="left" data-content="{{selection.customization}}">
+              Customization
+            </a>
+            {% endif %}
+          </li>
           {% endfor %}
         </ul>
       </div>
